syntax = "proto3";
package cosmatics;

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/refractedlabs/cosmatics/types";

message PostProcessFailure {
  int64 block_height = 1;
  string post_processor_id = 2;
  google.protobuf.Timestamp created_at = 3 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
  string reason = 4;
}